[package]
name = "cj_ascii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cj_ascii"
path = "src/main.rs"

# these flags provide the best performance possible, resulting in AnsiString methods that are roughly 2x faster than the String equivalents
[profile.release]  # main.rs testing
lto = true         # huge performance boost (for some methods)
opt-level = 3      # default
debug = false      # default
codegen-units = 1  # huge performance boost, especially for closures
#panic = "abort"   # minor performance boost, but mostly makes the binary smaller
#strip = true      # minor performance boost(if any), but mostly makes the binary smaller


[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serialize = ["serde"]

[dev-dependencies]
serde_json = "1.0"

