[package]
name = "cj_ascii"
version = "0.1.4"
edition = "2021"
description = "A library for working with ASCII strings in Rust"
keywords = ["ascii", "strings", "serialization"]
categories = ["encoding", "parsing"]
repository = "https://github.com/cubicle-jockey/cj_ascii"
homepage = "https://github.com/cubicle-jockey/cj_ascii"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cj_ascii"
path = "src/lib.rs"

#[[bin]]
#name = "cj_ascii"
#path = "src/_main.rs"

# these flags provide the best performance possible, resulting in AnsiString methods that are roughly 2x faster than the String equivalents
[profile.release]  # _main testing
lto = true         # huge performance boost (for some methods)
opt-level = 3      # default
debug = false      # default
codegen-units = 1  # huge performance boost, especially for closures
#panic = "abort"   # minor performance boost, but mostly makes the binary smaller
#strip = true      # minor performance boost(if any), but mostly makes the binary smaller


[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serialize = ["serde"]

[dev-dependencies]
serde_json = "1.0"

